Add default ExecutorService factory to checked, refactor CancelPolicy to conditionally include source of error